Tweak keyboard behaviour. Fix z-index issue.

--- a/packages/components/navigation/src/navigation.scss
+++ b/packages/components/navigation/src/navigation.scss
@@ -62,6 +62,7 @@
         background: #fff;
         box-shadow: 8px 8px 0 0 rgba( 0, 0, 0, .2 );
         left: 0;
+        z-index: 3;
 
         &--visible {
             display: flex;
